examples/negative/mutable/raw_array_set_no_row.kai
# Negative fixture (#511 / Mutable contract): the bare prelude
# `array_set(a, i, v)` form also raises `Mutable` demand when
# the target Array is a parameter (issue #251 § rule 1).

fn modify(a: Array[Int]) : Unit {
  let _ = array_set(a, 0, 42)
}

fn main() : Unit / Mutable + Console = {
  let a = array_make(3, 0)
  modify(a)
  print(int_to_string(a[0]))
}
